--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>Music</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<head> 
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
 <body style="background-image: url('pic_bg.jpg'); width:100%">
 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/eBGCYiToNEY?si=PIKiTq86ZPys7E7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
