--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body style="background-image: url('pic_bg.jpg'); width:100%">
 
-<div class="w3-container w3-pale-blue">
-<h1>Test</h1>
-</div>
+<h1 class="w3-text-yellow">Random Music Page</h1>
+
 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/eBGCYiToNEY?si=PIKiTq86ZPys7E7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
