--- a/index.html
+++ b/index.html
@@ -7,11 +7,52 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-image: url('pic_bg.jpg'); width:100%">
+<div class="w3-container">
+	<marquee><h1 class="w3-text-yellow">Random Music Page</h1></marquee>
 
-<h1 class="w3-text-yellow">Random Music Page</h1>
 
+	<div class="w3-red" style="display: inline-block;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/eBGCYiToNEY?si=PIKiTq86ZPys7E7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/eBGCYiToNEY?si=PIKiTq86ZPys7E7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<h2 class="w3-text-green">The Trick by AJR</h2>
+
+	</div>
+
+	<div class="w3-orange" style="display: inline-block;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/SsdkvYdSzlg?si=t348HpY7OhxbseAt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+		<h2 class="w3-text-purple">Little Bit of Love By Tom Gernnan</h2>
+
+	</div>
+
+	<div class="w3-yellow" style="display: inline-block;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/Fp8msa5uYsc?si=tfxUOEyxBLJ1NKSi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+		<h2 class="w3-text-blue"></h2>
+
+	</div>
+
+	<div class="w3-green" style="display: inline-block;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/Jbch_x5132o?si=f7gbVQNg4FKe51dv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+		<h2 class="w3-text-red"></h2>
+
+	</div>
+
+	<div class="w3-blue" style="display: inline-block;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/cHHLHGNpCSA?si=8p1ELU8pi9jVCdvh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+		<h2 class="w3-text-orange"></h2>
+
+	</div>
+
+	<div class="w3-purple" style="display: inline-block;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/rnFLF0ylZdY?si=Logojxakk8NSIZBx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+		<h2 class="w3-text-yellow"></h2>
+	</div>
+</div>
 
 </body>
 </html>
+purple
