Added names for things

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-image: url('pic_bg.jpg'); width:100%">
 <div class="w3-container">
-	<marquee><h1 class="w3-text-yellow">Random Music Page</h1></marquee>
+	<marquee><h1 class="w3-text-yellow">(*~R@ND0M MU$!C P@GE~*)</h1></marquee>
 
 
 	<div class="w3-red" style="display: inline-block;">
@@ -28,28 +28,31 @@
 	<div class="w3-yellow" style="display: inline-block;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/Fp8msa5uYsc?si=tfxUOEyxBLJ1NKSi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-		<h2 class="w3-text-blue"></h2>
+		<h2 class="w3-text-blue">Ghost By Justin Bieber</h2>
 
 	</div>
 
 	<div class="w3-green" style="display: inline-block;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/Jbch_x5132o?si=f7gbVQNg4FKe51dv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-		<h2 class="w3-text-red"></h2>
+		<h2 class="w3-text-red">Sunshine by OneRepublic</h2>
 
 	</div>
 
 	<div class="w3-blue" style="display: inline-block;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/cHHLHGNpCSA?si=8p1ELU8pi9jVCdvh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-		<h2 class="w3-text-orange"></h2>
+		<h2 class="w3-text-yellow">Waiting For Love by Avicii</h2>
 
 	</div>
 
 	<div class="w3-purple" style="display: inline-block;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/rnFLF0ylZdY?si=Logojxakk8NSIZBx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-		<h2 class="w3-text-yellow"></h2>
+		<h2 class="w3-text-orange">Looks Like Me by Dean Lewis</h2>
+
+
+
 	</div>
 </div>
 
