--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 		<h2 class="w3-text-orange">Looks Like Me by Dean Lewis</h2>
 
+	</div>
+
 	<div class="w3-red" style="display: inline-block;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/nfs8NYg7yQM?si=6YmL18EtW7yeaT0P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		<h2 class="w3-text-green">Attention by Charile Puth</h2>
