--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
 <title>Music</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+a:link, a:visited {
+  background-color: white;
+  color: black;
+  border: 2px solid blueviolet;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: green;
+  color: white;
+}
+</style>
 <head> 
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-image: url('pic_bg.jpg'); width:100%">
+
+<h2></h2><h1 class="w3-text-yellow">Have a song that you want to see here?</h1>
+
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSevR1Rh-Tsiu8-zJ6grlgDIj_7SQXXQoT2IEnMk4rgADs3F_w/viewform?usp=sf_link" target="_blank">Click Here</a>
+
 <div class="w3-container">
 	<marquee><h1 class="w3-text-yellow">(*~R@ND0M MU$!C P@GE~*)</h1></marquee>
 
@@ -68,4 +89,3 @@
 
 </body>
 </html>
-purple
