--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
+
 a:link, a:visited {
   background-color: white;
   color: black;
-  border: 2px solid blueviolet;
+  border: 2px solid lightgoldenrodyellow;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -15,7 +16,7 @@ a:link, a:visited {
 }
 
 a:hover, a:active {
-  background-color: green;
+  background-color: darkcyan;
   color: white;
 }
 </style>
