--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ a:hover, a:active {
 <div class="w3-container">
 	<marquee><h1 class="w3-text-yellow">(*~R@ND0M MU$!C P@GE~*)</h1></marquee>
 
+<div jsname="fuce" class="XjRuUc rBG7Lb B28vwe CL9RDd bJ5QHe" aria-label="Replay animation" aria-hidden="false" role="button" tabindex="0" jsaction="vs4iSb" data-ved="2ahUKEwif_8yG3vuEAxXFITQIHS83CAIQ-OIHegQIBxAB"><div jsname="ytkSBd" class="Bm5Y2d" style="width: 34px; height: 34px;"><g-img jsname="nUbhcb" class="tNvsxf cTgcCf" style="width: 238px; height: 34px; left: 0px;"><img src="https://www.google.com/logos/fnbx/ephemeral/confetti_anim_dm.png" class="YQ4gaf zr758c" alt="" width="238" height="34"></g-img></div><g-ripple class="aaU6gd rLdWfe" jscontroller="KbYvUc" jsdata="SMQQFe;_;Bvn+qg" jsaction="yYNR0b;rcuQ6b:npT2md"><div jsname="AHe6Kc" class="MDfoTd" style="opacity: 0.006;"></div><div jsname="yA8yjc" class="hdqIFe"></div></g-ripple><div class="NKGrXd"></div></div>
+
 
 	<div class="w3-red" style="display: inline-block;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/eBGCYiToNEY?si=PIKiTq86ZPys7E7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
