--- a/index.html
+++ b/index.html
@@ -128,9 +128,16 @@
 
 	<div class="w3-green" style="display: inline-block;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/IY8rOSyR5Rw?si=yD96--tIlLeKilT-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-		<h2 class="w3-text-red">Little Talks by Monsters of Men</h2>
+		<h2 class="w3-text-red">Little Talks by of Monsters and Men</h2>
 
 	</div>
+
+	<div class="w3-blue" style="display: inline-block;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/SocVqKJsYsA?si=M-zthaddAb26reZh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		<h2 class="w3-text-yellow">Ship In a Bottle by Fin Argus</h2>
+		
+	</div>
+
 
 	<div id="MC" class="tabcontent">
 		<h3 class= "w3-text-blue">Music Recommendations</h3>
