--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
 		<h3 class= "w3-text-blue">Music Recommendations</h3>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSevR1Rh-Tsiu8-zJ6grlgDIj_7SQXXQoT2IEnMk4rgADs3F_w/viewform?usp=sf_link" target="_blank">Music Reccommendations</a>
 	</div>
+
+	<button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
+
+	<img id="myImage" src="pic_bulboff.gif" style="width:100px">
+
+	<button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+
 </div>
 <script>
 function openCity(evt, cityName) {
