--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSevR1Rh-Tsiu8-zJ6grlgDIj_7SQXXQoT2IEnMk4rgADs3F_w/viewform?usp=sf_link" target="_blank">Music Reccommendations</a>
 	</div>
 
-	<button onclick="document.getElementById('myImage').src='frametwo.png'">Make Em Dance</button>
+	<button onclick="document.getElementById('myImage').src='squish1.jpeg'">Make Em Dance</button>
 
 	<img id="myImage" src="pic_bulboff.gif" style="width:100px">
 
-	<button onclick="document.getElementById('myImage').src='frameone.png'">Make Em Dance</button>
+	<button onclick="document.getElementById('myImage').src='squish2.jpeg'">Make Em Dance</button>
 
 </div>
 <script>
