--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSevR1Rh-Tsiu8-zJ6grlgDIj_7SQXXQoT2IEnMk4rgADs3F_w/viewform?usp=sf_link" target="_blank">Music Reccommendations</a>
 	</div>
 
+	<h2>Dancin Cat</h2>
+
 	<button onclick="document.getElementById('myImage').src='squish1.jpeg'">Make Em Dance</button>
-
 	<img id="myImage" src="pic_bulboff.gif" style="width:100px">
-
 	<button onclick="document.getElementById('myImage').src='squish2.jpeg'">Make Em Dance</button>
 
 </div>
